Fixed horizontal scrolling + start of about page

--- a/homestyles.css
+++ b/homestyles.css
@@ -19,6 +19,7 @@ body {
     background-color: #121212;
     color: #ffffff;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .spotify-logo {
@@ -122,7 +123,6 @@ body {
 .content {
     margin: 30px auto;
     padding: 0 20px;
-    max-width: 1200px;
 }
 
 footer {
